--- a/microblog.env
+++ b/microblog.env
@@ -4,3 +4,5 @@ MAIL_USE_TLS=True
 MAIL_USE_SSL=False
 MAIL_USERNAME=zsw2019329621212@163.com
 MAIL_PASSWORD='QTWTTKUBIODZULNR'
+APPID=20210925000956343
+BD_TRANSLATOR_KEY=4NYa7EMy7xZWIUzikKX6
